--- a/index.html
+++ b/index.html
@@ -10,3 +10,19 @@
     <header>
         <h2>Dessi</h2>
         <nav>
+            <img src="" alt="">
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skill">Skill</a></li>
+                <li><a href="#qua">Qualifications</a></li>
+                <li><a href="#project">Project</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="A">
+        <h2 id="about">Dessi Puspita Sari</h2>
+        <div>
+          <button onclick="">View Resume</button>  
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
