--- a/index.html
+++ b/index.html
@@ -26,3 +26,26 @@
           <button onclick="">View Resume</button>  
         </div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
+        <div class="edu">
+            <h3>Educational Background</h3>
+            <h4>PELITA NUSANTARA VOCATIONAL HIGH SCHOOL</h4>
+            <h5>2024-present</h5>
+        </div>   
+        <div class="gbr">
+            <img src="ex.png" alt="html">
+            <img src="ex.png" alt="css">
+            <img src="ex.png" alt="javascript">
+            <img src="ex.png" alt="PHP">
+            <img src="ex.png" alt="Python">
+            <img src="ex.png" alt="CorelDraw">
+            <img src="ex.png" alt="Photoshop">
+            <img src="ex.png" alt="Figma">
+        </div>
+    </section>
+
+
+    <section class="B">
+        <h2 id="skill">Skill</h2>
+        
+    </section>
+
