--- a/index.html
+++ b/index.html
@@ -49,3 +49,20 @@
         
     </section>
 
+
+    <section class="C">
+        <h2 id="qua">Qualifications</h2>
+        <p>what i have done so far</p>
+        <div class="qq">
+            <h3>Achivements</h3>
+            <h3>Experience</h3>
+        </div>
+    </section>
+
+
+    <section class="D">
+        <h2 id="project">Project</h2>
+
+    </section>
+</body>
+</html>
