--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
         </nav>
     </header>
     <section class="A">
-        <h2 id="about">Dessi Puspita Sari</h2>
-        <div>
-          <button onclick="">View Resume</button>  
+        <div class="a">
+            <div>
+                <h2 id="about">Dessi Puspita Sari</h2>
+                <div>
+                <button onclick="">View Resume</button>  
+                </div>
+            </div>
+            
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
+            </div>
         </div>
         
         <div class="edu">
