--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <section class="A">
         <div class="a">
+            <div class="miau">
                 <h2 id="about">Dessi Puspita Sari</h2>
                 <div>
                 <button onclick="">View Resume</button>  
