--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
+                <div class="edu">
+                </div>   
             </div>
         </div>
         
