--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
                 <div class="edu">
+                    <h3>Educational Background</h3>
+                    <h4>PELITA NUSANTARA VOCATIONAL HIGH SCHOOL</h4>
+                    <h5>2024-present</h5>
                 </div>   
             </div>
         </div>
