--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae dolorum cumque saepe dicta aliquam, quaerat blanditiis repudiandae iusto atque, cum totam recusandae voluptatem ea molestias illo repellat hic vero perferendis!</p>
+                <p>I'm an 11th-grade student majoring in Software Engineering with a strong interest in web development. I’ve learned the fundamentals of HTML, CSS, JavaScript, MySQL, and a bit of UI/UX design. I enjoy solving problems and am excited to apply my knowledge in practice during my upcoming internship.</p>
                 <div class="edu">
                     <h3>Educational Background</h3>
                     <h4>PELITA NUSANTARA VOCATIONAL HIGH SCHOOL</h4>
