--- a/index.html
+++ b/index.html
@@ -32,9 +32,18 @@
             <div>
                 <p>I'm an 11th-grade student majoring in Software Engineering with a strong interest in web development. I’ve learned the fundamentals of HTML, CSS, JavaScript, MySQL, and a bit of UI/UX design. I enjoy solving problems and am excited to apply my knowledge in practice during my upcoming internship.</p>
                 <div class="edu">
-                    <h3>Educational Background</h3>
-                    <h4>PELITA NUSANTARA VOCATIONAL HIGH SCHOOL</h4>
-                    <h5>2024-present</h5>
+                    <div class="bg">
+                    <div class="teks">
+                        <h3>Educational Background</h3>
+                        <h4>PELITA NUSANTARA VOCATIONAL HIGH SCHOOL</h4>
+                        <h5>2024-present</h5>
+                        </div>
+                    </div>
+                    <div class="soft">
+                        <p class="sskil">softskills</p>
+                        <img src="softskills.jpeg" alt="">
+                        <p class="sski">Problem Solving & Communication</p>
+                    </div>
                 </div>   
             </div>
         </div>
