--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <img src="ex.png" alt="javascript">
             <img src="ex.png" alt="PHP">
             <img src="ex.png" alt="Python">
+            <img src="ex.png" alt="MySQL">
             <img src="ex.png" alt="CorelDraw">
             <img src="ex.png" alt="Photoshop">
             <img src="ex.png" alt="Figma">
