melewati bintang bintang angkasa

--- a/index.html
+++ b/index.html
@@ -53,17 +53,8 @@
 
 
     <section class="B">
-        <h2 id="skill">Skill</h2>
+        <h2 id="skill">Hard Skill</h2>
         <div class="gbr">
-            <img src="ex.png" alt="html">
-            <img src="ex.png" alt="css">
-            <img src="ex.png" alt="javascript">
-            <img src="ex.png" alt="PHP">
-            <img src="ex.png" alt="Python">
-            <img src="ex.png" alt="MySQL">
-            <img src="ex.png" alt="CorelDraw">
-            <img src="ex.png" alt="Photoshop">
-            <img src="ex.png" alt="Figma">
         </div>
     </section>
 
