terpisahkan ku dari semua orang yang kucinta

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
     <section class="B">
         <h2 id="skill">Hard Skill</h2>
         <div class="gbr">
+            <img src="file/html.svg" alt="HTML">
+            <img style="" src="file/css.png" alt="CSS">
+            <img src="file/javascipt.svg" alt="JS">
+            <img src="file/php.svg" alt="PHP">
+            <img src="file/python.png" alt="Python">
+            <img src="file/mysql.svg" alt="MySQL">
+            <img src="file/cpp.svg" alt="C++">
+            <img src="file/coreldraw.svg" alt="Corel">
+            <img src="file/photoshop.svg" alt="Photoshop">
+            <img src="file/figma.svg" alt="Figma">
         </div>
     </section>
 
