--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
 
     <section class="C">
         <h2 id="qua">Qualifications</h2>
-        <p>what i have done so far</p>
+        <p>The Things That Shape Me</p>
         <div class="qq">
-            <div class="x"><h3>Achivements</h3></div>        
-            <div class="y"><img src="" alt=""></div>
-            <div class="z"><h3>Experience</h3></div>
-            
+            <div class="x"><h3>Training</h3></div>        
+            <div class="y"></div>
+            <div class="z"><h3>Course</h3></div>
         </div>
     </section>
 
