--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
             <div class="y"></div>
             <div class="z"><h3>Course</h3></div>
         </div>
+        <div class="timeline">
+            <div class="item left">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>Revou CodingCamp</h3>
+                    <p>sajodoiuas</p>
+                    <span> 2020 - 2024</span>
+                </div>
+            </div>
+
+            <div class="item right">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>Myskill </h3>
+                    <p>Senior High School</p>
+                    <span> 2017 - 2020</span>
+                </div>
+            </div>
+
     </section>
 
 
