Tada saki dake wo mite

--- a/index.html
+++ b/index.html
@@ -96,6 +96,51 @@
                 </div>
             </div>
 
+            <div class="item left">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>RPN</h3>
+                    <p>sajodoiuas</p>
+                    <span> 2020 - 2024</span>
+                </div>
+            </div>
+
+            <div class="item right">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>sololearn</h3>
+                    <p>Senior High School</p>
+                    <span> 2017 - 2020</span>
+                </div>
+            </div>
+
+            <div class="item left">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>Shortclass</h3>
+                    <p>sajodoiuas</p>
+                    <span> 2020 - 2024</span>
+                </div>
+            </div>
+
+            <div class="item right">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>Semursh</h3>
+                    <p>Senior High School</p>
+                    <span> 2017 - 2020</span>
+                </div>
+            </div>
+
+            <div class="item left">
+                <div class="dot"></div>
+                <div class="content">
+                    <h3>Compfest</h3>
+                    <p>sajodoiuas</p>
+                    <span> 2020 - 2024</span>
+                </div>
+            </div>
+        </div>        
     </section>
 
 
