--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="miau">
                 <h2 id="about">Dessi Puspita Sari</h2>
                 <div>
-                <a target="_blank" href="https://albertirgi.com"><button>View Resume</button></a>  
+                <a target="_blank" href="https://pdf.ac/1GtTLb"><button>View Resume</button></a>  
                 </div>
             </div>
             
