--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="miau">
                 <h2 id="about">Dessi Puspita Sari</h2>
                 <div>
-                <a target="_blank" href="https://drive.google.com/file/d/16TGjMoqfGm_tHkt0r-3KfS7wDy3Nc8aC/view?usp=sharing"><button>View Resume</button></a>  
+                <a target="_blank" href="file/Cv-Dessi.pdf"><button>View Resume</button></a>  
                 </div>
             </div>
             
