--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
         <div class="op">
             <div class="ojek">
                 <img src="file/animelist.png" alt="AnimeList">
-                <p>Daftar anime yang menyenangkan dan estetis dibuat dengan HTML, CSS, dan JavaScript. Menampilkan koleksi anime pilihan dengan tampilan bersih dan sedikit interaktivitas. <br><a 
+                <p><b>Daftar anime yang menyenangkan dan estetis dibuat dengan HTML, CSS, dan JavaScript. </b>Menampilkan koleksi anime pilihan dengan tampilan bersih dan sedikit interaktivitas.<br><a 
                 target="_blank" href="https://anime-list-d7x.pages.dev/">🔗Lihat Projek</a></p>
             </div>
             <div class="ojek">
                 <img src="file/pettrack.png" alt="PetTrack">
-                <p>Proyek desain UI/UX untuk aplikasi perawatan dan pelacakan hewan peliharaan. Dibuat di Figma dengan wireframe lengkap, panduan gaya, dan prototipe interaktif. Fitur termasuk onboarding, dashboard, dan halaman profil — semua dirancang untuk pecinta hewan! <br><a target="_blank" href="https://www.figma.com/proto/Ca7ojghIM3Gjo76M0FiIey/PetTrack?node-id=73-497&t=UB9647M2IEjB3Zof-1&scaling=scale-down&content-scaling=fixed&page-id=3%3A55&starting-point-node-id=73%3A497">🔗Lihat Prototipe</a></p>
+                <p>Proyek desain UI/UX untuk aplikasi perawatan dan pelacakan hewan peliharaan. Dibuat di Figma dengan <b>wireframe lengkap , panduan gaya, dan </b>prototipe interaktif.<b> Fitur termasuk onboarding, dashboard, dan halaman profil — semua dirancang untuk pecinta hewan!</b><br><a target="_blank" href="https://www.figma.com/proto/Ca7ojghIM3Gjo76M0FiIey/PetTrack?node-id=73-497&t=UB9647M2IEjB3Zof-1&scaling=scale-down&content-scaling=fixed&page-id=3%3A55&starting-point-node-id=73%3A497">🔗Lihat Prototipe</a></p>
             </div>
             <div class="ojek">
                 <img src="file/calulator.png" alt="calculator">
-                <p>Kalkulator sederhana namun fungsional dibuat dengan HTML, CSS, dan JavaScript. Dirancang dengan tampilan lucu dan interaksi yang mulus — cocok untuk hitung cepat dengan gaya!<br><a target="_blank" href="https://calculator-5z9.pages.dev/">🔗Lihat Projek</a></p>
+                <p>Kalkulator sederhana namun fungsional dibuat dengan HTML, CSS, dan JavaScript.<b> Dirancang dengan tampilan lucu dan interaksi yang mulus — cocok untuk hitung cepat dengan gaya!</b><br><a target="_blank" href="https://calculator-5z9.pages.dev/">🔗Lihat Projek</a></p>
             </div>
         </div>
     </section>
