--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2 class="LL">About Me</h2>
         <div class="a">
             <div class="miau">
+                <strong>— Hello I'm</strong>
                 <h2 id="about">Dessi Puspita Sari</h2>
                 <div>
                 <a target="_blank" href="file/Cv-Dessi.pdf"><button>View Resume</button></a>  
