ini tinggal 1 lagi update link ajah ygy

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             
             <div>
-                <p class="em">Saya siswa kelas 11 jurusan Rekayasa Perangkat Lunak dengan minat besar di pengembangan web. Saya telah mempelajari dasar-dasar HTML, CSS, JavaScript, MySQL, dan sedikit desain UI/UX. Saya senang dan semangat untuk belajar hal baru lingkungan PKL</p>
+                <p class="em">Saya siswa kelas 11 jurusan Rekayasa Perangkat Lunak dengan minat besar di pengembangan web. Saya telah mempelajari dasar-dasar HTML, CSS, JavaScript, MySQL, dan sedikit UI/UX desain. Saya senang dan semangat untuk belajar hal baru lingkungan PKL</p>
                 <div class="edu">
                     <div class="bg">
                     <div class="teks">
@@ -84,7 +84,7 @@
                 <div class="dot"></div>
                 <div class="content">
                     <h3 class="hhhhh">CodingCamp <br>
-                    ↑ Revou</h3>
+                    ↑Revou</h3>
                     <p>Pelatihan intensif <b>tentang dasar-dasar pengembangan web menggunakan </b>HTML, CSS,<b> dan</b> J<b>ava</b>S<b>cript melalui praktik langsung</b>.</p><a target="_blank" href="https://drive.google.com/file/d/17OXPxtlkztgHWywGMOXgdjnlHerIrwaA/view"><h6>Juni 2025</h6></a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="item right">
                 <div class="dot"></div>
                 <div class="content">
-                    <h3 class="hhhhh">E-learning Membership <br>↑ MySkill</h3>
+                    <h3 class="hhhhh">E-learning Membership <br>↑MySkill</h3>
                     <p>Mempelajari berbagai topik digital<b> termasuk AI, Web Development, Data Science, QA, UI/UX, Desain Grafis, dan IoT</b>.</p>
                     <a target="_blank" href="https://drive.google.com/drive/folders/1C8bp-gsCmNcSVZqH8iQ160bTETeYawJj?usp=sharing"><h6>Maret 2025</h6></a>
                 </div>
@@ -101,7 +101,7 @@
             <div class="item left">
                 <div class="dot"></div>
                 <div class="content">
-                    <h3 class="hhhhh">Independent Learning <br>↑ RPN Community</h3>
+                    <h3 class="hhhhh">Independent Learning <br>↑RPN Community</h3>
                     <p><b>Meningkatkan logika pemrograman dengan menyelesaikan</b> studi kasus JavaScript di komunitas<b> RPN</b>.</p>
                     <a target="_blank" href="https://github.com/strzcy/Week1-Welcome-to-Code"><h6>Maret 2025</h6></a>
                 </div>
@@ -110,8 +110,8 @@
             <div class="item right">
                 <div class="dot"></div>
                 <div class="content">
-                    <h3 class="hhhhh">Coding Foundations Course <br>↑ Sololearn</h3>
-                    <p>Belajar<b> dasar-dasar</b> HTML, CSS, JS, MySQL, dan Data Analist<b> melalui kuis dan latihan praktis</b>.</p>
+                    <h3 class="hhhhh">Coding Foundations Course <br>↑Sololearn</h3>
+                    <p>Belajar<b> dasar-dasar</b> HTML, CSS, JS, MySQL, dan Data Analist<b> melalui kuis dan praktek</b>.</p>
                     <a target="_blank" href="https://drive.google.com/file/d/1oPf3OL2FME9hxxIsprvowFYBer35z3B1/view?usp=sharing"><h6>Juli 2025</h6></a>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="dot"></div>
                 <div class="content">
                     <h3 class="hhhhh">Figma for UI/UX Design <br>↑MySkill</h3>
-                    <p>Mengeksplorasi desain UI/UX<b>, dari wireframe dan style guide hingga prototipe untuk berbagai jenis halaman</b>.</p>
+                    <p>Mengeksplorasi UI/UX desain<b>, dari wireframe dan style guide hingga prototipe untuk berbagai jenis halaman</b>.</p>
                     <a target="_blank" href="https://drive.google.com/file/d/1pU8HhsexE-rn5Ez-YAPeWxwN0cIa12U7/view?usp=sharing"><h6>Mei 2025</h6></a>
                 </div>
             </div>
@@ -147,25 +147,25 @@
 
 
     <section class="D">
-        <h2 id="Project">Projek</h2>
+        <h2 id="Project">Project</h2>
         <div class="op">
             <div class="ojek">
                 <img src="file/animelist.png" alt="AnimeList">
                 <p><b>Daftar anime yang menyenangkan dan estetis dibuat dengan HTML, CSS, dan JavaScript. </b>Menampilkan koleksi anime pilihan dengan tampilan bersih dan sedikit interaktivitas.<br><a 
-                target="_blank" href="https://anime-list-d7x.pages.dev/">🔗Lihat Projek</a></p>
+                target="_blank" href="https://anime-list-d7x.pages.dev/">🔗Lihat Project</a></p>
             </div>
             <div class="ojek">
                 <img src="file/pettrack.png" alt="PetTrack">
-                <p>Proyek desain UI/UX untuk aplikasi perawatan dan pelacakan hewan peliharaan. Dibuat di Figma dengan <b>wireframe lengkap , panduan gaya, dan </b>prototipe interaktif.<b> Fitur termasuk onboarding, dashboard, dan halaman profil — semua dirancang untuk pecinta hewan!</b><br><a target="_blank" href="https://www.figma.com/proto/Ca7ojghIM3Gjo76M0FiIey/PetTrack?node-id=73-497&t=UB9647M2IEjB3Zof-1&scaling=scale-down&content-scaling=fixed&page-id=3%3A55&starting-point-node-id=73%3A497">🔗Lihat Prototipe</a></p>
+                <p>Proyek desain UI/UX untuk aplikasi perawatan dan pelacakan hewan peliharaan. Dibuat di Figma dengan <b>wireframe lengkap , panduan gaya, dan </b>prototipe interaktif.<b> Fitur termasuk onboarding, dashboard, dan halaman profil — semua dirancang untuk pecinta hewan!</b><br><a target="_blank" href="https://www.figma.com/proto/Ca7ojghIM3Gjo76M0FiIey/PetTrack?node-id=73-497&t=UB9647M2IEjB3Zof-1&scaling=scale-down&content-scaling=fixed&page-id=3%3A55&starting-point-node-id=73%3A497">🔗Lihat Prototype</a></p>
             </div>
             <div class="ojek">
                 <img src="file/calulator.png" alt="calculator">
-                <p>Kalkulator sederhana namun fungsional dibuat dengan HTML, CSS, dan JavaScript.<b> Dirancang dengan tampilan lucu dan interaksi yang mulus — cocok untuk hitung cepat dengan gaya!</b><br><a target="_blank" href="https://calculator-5z9.pages.dev/">🔗Lihat Projek</a></p>
+                <p>Kalkulator sederhana namun fungsional dibuat dengan HTML, CSS, dan JavaScript.<b> Dirancang dengan tampilan lucu dan interaksi yang mulus — cocok untuk hitung cepat dengan gaya!</b><br><a target="_blank" href="https://calculator-5z9.pages.dev/">🔗Lihat Project</a></p>
             </div>
         </div>
     </section>
     <footer id="Contact">
-        <div class="quicklinks">
+        <div class="quicklinks"Project>
             <h3>Quicklinks</h3>
             <p><a href="#About">About</a></p>
             <p><a href="#Qualifications">Qualifications</a></p>
