--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="content">
                     <h3 class="hhhhh">JC Programming Contest <br>↑Compfest</h3>
                     <p>Berpartisipasi <b>dalam </b>lomba <b>pemrograman</b> bahasa C<b> yang berfokus pada penyelesaian soal logika dengan cepat dan akurat</b>.</p>
-                    <a target="_blank" href="file/cp"><h6>Agustus 2025</h6></a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1xgeI-9mouKB90_RjG2rGBpWoSR1YY0tY/view?usp=sharing"><h6>Agustus 2025</h6></a>
                 </div>
             </div>
         </div>        
