nambah anuan hehe

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
         <div class="sosmed">
             <h3>Media Sosial</h3>
             <p><a href="mailto:desipuspita46832@gmail.com">Gmail</a></p>
-            <p><a href="">Instagram</a></p>
-            <p><a href="">WhatsApp</a></p>
-            <p><a href="">GitHub</a></p>
+            <p><a href="https://www.instagram.com/dddessi.sj/">Instagram</a></p>
+            <p><a href="https://api.whatsapp.com/send?phone=+62 81294491075&text=hi%20dessi!%20%F0%9F%8C%BA...">WhatsApp</a></p>
+            <p><a href="https://github.com/strzcy">GitHub</a></p>
         </div>
         <div class="logo">
             <a href="mailto:desipuspita46832@gmail.com"><img src="file/gmail.png" alt=""></a>
